--- a/basic_app/templates/signup.html
+++ b/basic_app/templates/signup.html
@@ -3,5 +3,12 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block body %}
-  
+  <h1>Sign up</h1>
+  <form method="post">
+    {% csrf_token %}
+
+    {{ form.as_p }}
+
+    <input type="submit" value="Sign up!">
+  </form>
 {% endblock %}
