--- a/basic_app/templates/base.html
+++ b/basic_app/templates/base.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="{% url 'basic_app:user_signup' %}">Sign Up</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="{% url 'basic_app:user_login' %}">Login</a>
         </li>
       </ul>
     </div>
