--- a/basic_app/templates/base.html
+++ b/basic_app/templates/base.html
@@ -28,13 +28,20 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
+
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'basic_app:user_signup' %}">Sign Up</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'basic_app:user_login' %}">Login</a>
-        </li>
+        {% if not user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'basic_app:user_signup' %}">Sign Up</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'basic_app:user_login' %}">Login</a>
+          </li>
+        {% else %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'basic_app:user_logout' %}">Logout</a>
+          </li>
+        {% endif %}
       </ul>
     </div>
   </nav>
