--- a/basic_app/templates/base.html
+++ b/basic_app/templates/base.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+  <style>
+    .link {
+      color:black;
+      text-decoration: none; 
+      background-color: none;
+    }
+  </style>
 
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #50C878;">
     <a class="navbar-brand" href="{% url 'basic_app:home' %}">Home</a>
@@ -16,16 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Groups</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="{% url 'basic_app:groups_list' %}">Groups</a>
         </li>
       </ul>
 
