Switched the AUTH_USER_MODEL so I could use the LoginView. However, this is not compatible with the django admin user interface, so I disabled Django admin

--- a/basic_app/templates/index.html
+++ b/basic_app/templates/index.html
@@ -4,4 +4,10 @@
 
 {% block body %}
   <h1>Index</h1>
+
+  {% if user.is_authenticated %}
+    <h1>IS AUTHENTICATED</h1>
+  {% else %}
+    <h1>Failed</h1>
+  {% endif %}
 {% endblock %}
