Added join group functionality, setting an assocation query between the user and the group

--- a/basic_app/templates/list_groups.html
+++ b/basic_app/templates/list_groups.html
@@ -20,5 +20,10 @@
       </a>
     </h1>
     <p>Members: {{ group.members_count }}</p>
+    <form action="{% url 'basic_app:join_group' pk=group.pk %}" method="post">
+      {% csrf_token %}
+
+      <input type="submit" value="Join Group">
+    </form>
   {% endfor %}
 {% endblock %}
