Anonymous users are now restricted to certain functionalities such as joining or creating a group

--- a/basic_app/templates/group_detail.html
+++ b/basic_app/templates/group_detail.html
@@ -10,20 +10,22 @@
   <p>Members: {{ object.members_count }}</p>
   <p>Date Created: {{ object.date_created }}</p>
 
-  <!-- Display delete group functionality only for the leader -->
-  {% if object.leader == user %}
-    <a href="{% url 'basic_app:delete_group' pk=object.pk %}">Delete group</a>
-  {% else %}
-    {% if already_joined %}
-      
+  {% if user.is_authenticated %}
+    <!-- Display delete group functionality only for the leader -->
+    {% if object.leader == user %}
+      <a href="{% url 'basic_app:delete_group' pk=object.pk %}">Delete group</a>
     {% else %}
-      <form action="{% url 'basic_app:join_group' pk=group.pk %}" method="post">
-        {% csrf_token %}
+      {% if already_joined %}
+        <h1>Already Joined</h1>
+      {% else %}
+        <form action="{% url 'basic_app:join_group' pk=group.pk %}" method="post">
+          {% csrf_token %}
 
-        <input type="submit" value="Join Group">
-      </form>
+          <input type="submit" value="Join Group">
+        </form>
+      {% endif %}
     {% endif %}
-  {% endif %}
 
-  <!-- Display the posts -->
+    <!-- Display the posts -->
+  {% endif %}
 {% endblock %}
