--- a/basic_app/templates/base.html
+++ b/basic_app/templates/base.html
@@ -23,29 +23,29 @@
     }
   </style>
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #50C878;">
-    <a class="navbar-brand" href="{% url 'basic_app:home' %}">Home</a>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(211, 101, 11);">
+    <a class="navbar-brand text-warning" href="{% url 'basic_app:home' %}">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'basic_app:groups_list' %}">Groups</a>
+          <a class="nav-link text-warning" href="{% url 'basic_app:groups_list' %}">Groups</a>
         </li>
       </ul>
 
       <ul class="navbar-nav ml-auto">
         {% if not user.is_authenticated %}
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'basic_app:user_signup' %}">Sign Up</a>
+            <a class="nav-link text-warning" href="{% url 'basic_app:user_signup' %}">Sign Up</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'basic_app:user_login' %}">Login</a>
+            <a class="nav-link text-warning" href="{% url 'basic_app:user_login' %}">Login</a>
           </li>
         {% else %}
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'basic_app:user_logout' %}">Logout</a>
+            <a class="nav-link text-warning" href="{% url 'basic_app:user_logout' %}">Logout</a>
           </li>
         {% endif %}
       </ul>
