Changed btn style

--- a/basic_app/templates/signup.html
+++ b/basic_app/templates/signup.html
@@ -14,6 +14,6 @@
     {% csrf_token %}
     {{ form.as_p }}
 
-    <input type="submit" value="Sign up!">
+    <input class="btn btn-success" type="submit" value="Sign up!">
   </form>
 {% endblock %}
