--- a/basic_app/templates/create_group.html
+++ b/basic_app/templates/create_group.html
@@ -8,6 +8,6 @@
     {% csrf_token %}
     {{ form.as_p }}
 
-    <input type="submit" value="Submit">
+    <input class="btn btn-primary" type="submit" value="Create">
   </form>
 {% endblock %}
