--- a/basic_app/templates/login.html
+++ b/basic_app/templates/login.html
@@ -15,6 +15,6 @@
     {% csrf_token %}
     {{ form.as_p }}
 
-    <input class="btn btn-primary" type="submit" value="Login">
+    <input type="submit" value="Login">
   </form>
 {% endblock %}
