--- a/basic_app/templates/group_confirm_leave.html
+++ b/basic_app/templates/group_confirm_leave.html
@@ -8,6 +8,6 @@
   <form method="post">
     {% csrf_token %}
 
-    <input type="submit" value="Leave">
+    <input class="btn btn-danger" type="submit" value="Leave">
   </form>
 {% endblock %}
