Added proper validation error messages during signup. Also customised the clean method to clean only the verified password field, so we can grab its errors upon failure

--- a/basic_app/templates/base.html
+++ b/basic_app/templates/base.html
@@ -21,6 +21,10 @@
       text-decoration: none; 
       background-color: none;
     }
+
+    .error {
+      color: rgb(255, 24, 63);
+    }
   </style>
 
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(211, 101, 11);">
