--- a/basic_app/templates/signup.html
+++ b/basic_app/templates/signup.html
@@ -12,7 +12,40 @@
   <h1>Sign up</h1>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    
+    <p>
+      {{ form.username.label_tag }}
+      {{ form.username }}
+      
+      {% if form.username.errors %}
+        {% for error in form.username.errors %}
+          <br>
+          <small class="error">{{ error }}</small>
+        {% endfor %}
+      {% endif %}
+    </p>
+    <p>
+      {{ form.password.label_tag }}
+      {{ form.password }}
+      
+      {% if form.password.errors %}
+        {% for error in form.password.errors %}
+          <br>
+          <small class="error">{{ error }}</small>
+        {% endfor %}
+      {% endif %}
+    </p>
+    <p>
+      {{ form.verify_password.label_tag }}
+      {{ form.verify_password }}
+
+      {% if form.verify_password.errors %}
+        {% for error in form.verify_password.errors %}
+          <br>
+          <small class="error">{{ error }}</small>
+        {% endfor %}
+      {% endif %}
+    </p>
 
     <input class="btn btn-success" type="submit" value="Sign up!">
   </form>
