--- a/basic_app/templates/login.html
+++ b/basic_app/templates/login.html
@@ -3,17 +3,23 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-  {% if failed_login %}
-    <div class="alert alert-danger" role="alert">
-      Your username or password didn't match. Please try again.
-    </div>
-  {% endif %}
-
   <h1>Login</h1>
 
+  {% if form.errors %}
+    <!-- Display non-verbose error message to prevent brute forcing -->
+    <p class="error">Invalid username or password.</p>
+  {% endif %}
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+
+    <p>
+      {{ form.username.label }}
+      {{ form.username }}
+    </p>
+    <p>
+      {{ form.password.label }}
+      {{ form.password }}
+    </p>
 
     <input class="btn btn-primary" type="submit" value="Login">
   </form>
